fix issuse, thank you page message hiding behind nav bar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -746,6 +746,7 @@ a {
     align-items: center;
     justify-content: space-between;
     border: none;
+    margin-top: 5rem;
 }
 
 .contact-text p {
